# BookTranslator

./: .gitignore  .vercelignore  BILINGUAL_IMPLEMENTATION_PLAN.md  BILINGUAL_PRODUCTION_READY.md  BUSINESS_SETUP.md  CHANGELOG.md  CURRENT_STATUS.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_ROADMAP.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_UPDATE_SUMMARY.md  DOMAIN_SETUP.md  ENCODING_FIX.md  ENVIRONMENT_SETUP.md  ENVIRONMENT_VARIABLES.md  ENV_CHECKLIST.md  ENV_FILES_EXPLAINED.md  EPUB_ARCHITECTURE_ANALYSIS.md  FINAL_LANGUAGE_CONFIGURATION.md  FIXES_SUMMARY.md  HTML_DISPLAY_REPORT.md  INVESTIGATION_SUMMARY.txt  LANGUAGE_TEST_REPORT.md  MVP_DEPLOYMENT.md  PAYPAL_SETUP_GUIDE.md  PDF_INPUT_IMPLEMENTATION_PLAN.md  PDF_SUPPORT_ASSESSMENT.md  POST_TRANSLATION_WORKFLOW.md  PREVIEW_FEATURE.md  PRODUCTION_DEPLOYMENT.md  QUICK_REFERENCE.md  QUICK_START.md  R2_SETUP_GUIDE.md  RAILWAY_SETUP_GUIDE.md  README.md  SECRETS_VS_CONFIG.md  TODO.md  TRANSLATION_QUALITY_REPORT.md  TROUBLESHOOTING.md  (+29 more)
apps/api/: .buildtrigger  .env.example  .env.local.worker  .gitignore  ARCHITECTURE.md  BILINGUAL_EPUB_CHANGES.md  BILINGUAL_PDF_DEPLOYMENT.md  Dockerfile  OUTPUT_FORMAT_MIGRATION_SUMMARY.md  PDF_GENERATION.md  R2_INTEGRATION_TEST_RESULTS.md  add_output_format_column.py  add_progress_percent.sql  download_and_inspect_bilingual.py  dump.rdb  generate_and_open_test_epub.py  html_to_pdf.py  inspect_production_bilingual.py  inspect_test_epub.py  nixpacks.toml  pyproject.toml  railway.toml  supervisord.conf  test_bilingual_for_inspection.epub  test_pdf_local.sh
apps/api/app/: __init__.py  db.py  (+12 more)
(+186 files in other folders)
