[tool.poetry]
name = "epub-translator-api"
version = "0.1.0"
description = "FastAPI backend for EPUB translation service"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
pydantic-settings = "^2.0.0"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"
boto3 = "^1.34.0"
stripe = "^7.0.0"
redis = "^5.0.0"
rq = "^1.15.0"
httpx = "^0.25.0"
ebooklib = "^0.18"
beautifulsoup4 = "^4.12.0"
lxml = "^4.9.0"
python-multipart = "^0.0.6"
langdetect = "^1.0.9"
python-dotenv = "^1.0.0"
slowapi = "^0.1.9"
weasyprint = "^66.0"
paypalrestsdk = "^1.13.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
isort = "^5.12.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"